# Kahoot

./: .gitignore  411_our_api.md  README.md  devlog.txt  package.json  test.js
.github/workflows/: build-backend.yml  build-frontend.yml  docker-publish.yml
kahoot-clone-backend/: Cargo.toml  Dockerfile
kahoot-clone-backend/src/: api.rs  ext.rs  main.rs  state.rs
kahoot-clone-backend/src/ws/: api.rs  mod.rs  state.rs
kahoot-clone-frontend/: Dockerfile  kahoot.d.ts  package-lock.json  package.json  test.tsx  tsconfig.json
kahoot-clone-frontend/Components/: Editor.tsx  GameButton.js  Header.tsx  HeaderBar.tsx  Options.tsx  Questions.tsx
kahoot-clone-frontend/lib/: postData.ts  useSSRUser.tsx  useUser.tsx
kahoot-clone-frontend/pages/: _app.tsx  create.tsx  host.tsx  index.js  index.tsx  play.tsx  profile.tsx
kahoot-clone-frontend/pages/api/: create.tsx  getGames.ts  signout.ts  signup.ts
kahoot-clone-frontend/pages/auth/: login.js  login.tsx  signup.js  signup.tsx
kahoot-clone-frontend/serverless/: mongoCache.ts
kahoot-clone-frontend/styles/: Editor.module.css  Options.module.css  Play.module.css  Questions.module.css  create.module.css  host.module.css  profile.module.css  signup.module.css
kahoot_frontend/: package-lock.json  package.json
kahoot_frontend/pages/auth/: login.js  signup.js
kahoot_frontend/styles/: Header.module.css  Play.module.css
other/: play.js
pages/: host.html  host.js  index.html  index.js  play.html  play.js
pages/game/: play.js
styles/: Play.module.css  globals.css  signup.module.css
(+1 files in other folders)
