[package]
name = "kahoot-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.3.0", features = ["fs"] }
futures = "0.3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"

# Dependencies only used during tests
[dev-dependencies]
tokio-tungstenite = "*"
assert2 = "0.3"